Notes on installing/configuring web-app

--- a/README
+++ b/README
@@ -10,3 +10,27 @@ through ansible.
 Generally this would run on the iPXE server that hosts are booting from
 to install Clear Linux. See docs on https://clearlinux.org for more details.
 
+Standing up the web app (high level)
+# Configure nginx
+    # In /etc/nginx/nginx.conf....
+    # Note only server directives here.
+# Land ister-cloud-init-svc on pxe server
+# Copy it to /var/www/ister-cloud-init-svc and set perms appropriately
+    mkdir /var/www
+    copy ister-cloud-init-svc to /var/www
+    chown -R httpd:httpd /var/www
+# User virtualenv and requirements.txt file to generate virtualenv for web app
+# Make uwsgi logging directory
+    mkdir -p /var/log/uwsgi
+    chown httpd:httpd /var/log/uwsgi
+# Copy uwsgiemp service file into /etc/systemd/service/uwsgiemp.service
+    <insert sytemd unit file here>
+# Create uwsgi vassals directory
+    mkdir -p /etc/uwsgi/vassals
+    ln -s /var/www/ister-cloud-init-svc/icis_uwsgi.ini  /etc/uwsgi/vassals
+# Start uwsgi emperor
+    systemctl enable uwsgiemp
+    systemctl start uwsgiemp
+# Test web-app
+    curl localhost/icis/get_role/compute
+
